--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,6 +17,7 @@
           <ul class="nav nav-tabs">
             <li><a href="index.html">Main</a></li>
             <li class="active"><a href="contact.html">Contacts</a></li>
+            <li><a href="student_list.html">Students</a></li>
           </ul>
         </nav>
 
