--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <!-- meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico" -->
-
     <title>MyBursa | Main</title>
 
     <!-- Bootstrap core CSS -->
@@ -28,8 +20,8 @@
       <nav class="navbar navbar-default">
             <ul class="nav nav-tabs">
               <li class="active"><a href="index.html">Main</a></li>
-
-              <li><a href="contacts.html">Contact</a></li>
+              <li><a href="contact.html">Contacts</a></li>
+              <li><a href="student_list.html">Students</a></li>
             </ul>
       </nav>
 
@@ -45,7 +37,7 @@
           <li class="list-group-item">third</li>
         </ul>
 
-        <p><a class="btn btn-primary btn-lg" href="contacts.html" role="button">Contacts</a></p>
+        <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Contacts</a></p>
       </div>
 
 
