--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -23,7 +23,7 @@
 
         <div class="panel panel-default">
           <h1>Stadnikov Semen</h1>
-          <div class="panel-heading">There is a student info</p>
+          <div class="panel-heading">There is a student info</div>
           <img src="../static/images/semen.jpg" class="avatar">
           <div>Student's card</div>
         <table class="table">
@@ -46,7 +46,7 @@
                 <td>Grogorianovich</td>
             </tr>
             <tr>
-                <th>Birthdate</th>
+                <th>Birth Date</th>
                 <td>15/09/1956</td>
             </tr>
             <tr>
@@ -54,7 +54,7 @@
                 <td>Bobruysk, Pushkina st., 4, ap. 21</td>
             </tr>
             <tr>
-                <th>Email</th>
+                <th>E-mail</th>
                 <td>chegevara@gmail.com</td>
             </tr>
             <tr>
