--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -37,7 +37,7 @@
                     Name
                 </th>
                 <th>
-                    Adress
+                    Address
                 </th>
                 <th>
                     Skype
