--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,3 +52,25 @@ p {
     background-color: #337ab7;
     border-color: #2e6da4;
 }
+
+.table {
+    background-color: #eee;
+}
+
+.panel {
+    color: #888;
+}
+
+.panel-heading {
+    font-size: 1.5em;
+}
+
+td {
+    color: #8888AA;
+    padding: 5px;
+}
+
+.avatar {
+    width: 250px;
+    height: auto;
+}
