--- a/templates/contact.html
+++ b/templates/contact.html
@@ -57,6 +57,7 @@
           <nav>
             <ul class="nav navbar-nav">
               <li> <a href="index.html">Main </a> </li>
+              <li> <a href="student_list.html">Students </a> </li>
               <li> <a href="contact.html" class="active">Contacts</a> </li>
               <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search"></i></a> </li>
             </ul>
@@ -218,9 +219,8 @@
               <li><span class="fa fa-envelope-o"></span>
                 <div class="email">
                 <h6>email</h6>
-                  <p> info@innovation.contact.com </p>
-                  <p> support@innovation.com</p>
-                </div>
+                  <p> daria.mykhalevych@gmail.com </p>
+                  </div>
               </li>
               <li><span class="fa fa-phone"></span>
 
@@ -236,18 +236,9 @@
         </div>
       </div>
 
-    <!-- Contact Section end Here -->
-
-    <!-- Map Section Start Here -->
-    <div class="map">
-      <div id="map" style="width:100%; height:500px;"> </div>
-    </div>
-  </div>
-  <!-- Map Section Start Here -->
-
-  <!-- site content end Here -->
-
-  <!-- Footer Section Start Here -->
+<!-- Contact Section end Here -->
+<!-- site content end Here -->
+<!-- Footer Section Start Here -->
   <footer id="footer">
     <section class="footer">
       <div class="container">
@@ -282,7 +273,7 @@
           <h5 class="title">Футер #4</h5>
           <p> <i class="fa fa-map-marker"></i> <span>Где-то в Харькове... </span></p>
           <p> <i class="fa fa-phone"></i> <span>+ 38 (096) 469 15 57 </span></p>
-          <p> <i class="fa fa-envelope"></i> <span>info@innovation.com </span></p>
+          <p> <i class="fa fa-envelope"></i> <span>daria.mykhalevych@gmail.com </span></p>
           <ul class="social">
             <li><a href="https://www.facebook.com/pages/It-Bursa/1539330322946469" class="hvr-radial-out "><i class="fa fa-facebook"></i></a></li>
             <li><a href="https://vk.com/public82364378" class="hvr-radial-out "><i class="fa fa-vk"></i></a></li>
