--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>PyBursa - Профессиональные Python & Django  курсы</title>
+<title>Студенты курса PyBursa</title>
 <meta name="description" content="Выучить питон на PyBursa быстро и легко!">
 <meta name="keywords" content="питон, курсы, онлайн">
 <meta name="author" content="Олександр Кучеренко">
@@ -56,8 +56,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <nav>
             <ul class="nav navbar-nav">
-              <li> <a href="index.html" class="active">Main </a> </li>
-              <li> <a href="student_list.html">Students </a> </li>
+              <li> <a href="index.html">Main </a> </li>
+              <li> <a href="student_list.html" class="active">Students </a> </li>
               <li> <a href="contact.html">Contacts</a> </li>
               <li> <a style="visibility: visible;" class="search-button" href="#"><i class="icon icon-Search"></i></a> </li>
             </ul>
@@ -78,196 +78,109 @@
 
   <!-- Site Content -->
   <div id="main">
-    <!-- #banner -->
-    <section id="banner">
-      <div class="banner-container">
-        <div class="banner">
-          <ul>
-            <li
-						class="slider-1"
-						data-transition="random"
-						data-slotamount="7"
-						data-thumb="../static/images/slides/image1.jpg"
-						> <img
-							src="../static/images/slides/image1.jpg"
-              alt="slider"
-							data-bgrepeat="no-repeat"
-							data-bgfit="cover"
-                            data-bgposition="top left"
-							data-kenburns="on"
-							data-duration="2000"
-							data-ease="Power4.easeInOut"
-							data-bgfitend="100"
-							data-bgpositionend="center top">
-
-              <!-- .banner-txt -->
-              <div
-							class="caption fadeIn lfl banner-txt col-lg-5 tp-resizeme"
-							data-x="600"
-							data-y="35"
-							data-speed="700"
-							data-start="1700"
-							data-easing="easeOutBack">
-                <h1 class="courus">PyBursa Courses<br>
-                  <span>инновационные технологии</span> </h1>
-                <p>  Попади в тренд современной <br>
-WEB разработки </p>
-                <button>Записаться</button>
-              </div>
-              <!-- /.banner-txt -->
-
-            </li>
-            <li
-						class="slider-2"
-						data-transition="random"
-						data-slotamount="7"
-						data-thumb="../static/images/image2.jpg"
-						> <img
-							src="../static/images/slides/image2.jpg"
-              alt="slider2"
-							data-bgposition="left bottom"
-							data-kenburns="on"
-							data-duration="2000"
-							data-ease="Power4.easeInOut"
-							data-bgfit="200"
-							data-bgfitend="100"
-							data-bgpositionend="center top">
-              <div
-							class="caption skewfromright  bold-innovation-slider-caption tp-resizeme"
-							data-x="450"
-							data-y="100"
-							data-speed="600"
-							data-start="1700"
-							data-easing="easeOutBack">
-                <h1>Online PyBursa</h1>
-              </div>
-              <div
-							class="caption randomrotate light-innovation-slider-caption tp-resizeme"
-							data-x="450"
-							data-y="200"
-							data-speed="500"
-							data-start="2200"
-							data-easing="easeOutBack">
-                <button>Начать</button>
-              </div>
-            </li>
-<li
-						class="slider-3"
-						data-transition="random"
-						data-slotamount="7"
-						data-thumb="../static/images/image3.jpg"
-						> <img
-							src="../static/images/slides/image3.jpg"
-              alt="slider3"
-							data-bgrepeat="no-repeat"
-							data-bgfit="cover"
-                            data-bgposition="top left"
-							data-kenburns="on"
-							data-duration="2000"
-							data-ease="Power4.easeInOut"
-							data-bgfitend="100"
-							data-bgpositionend="center top">
-
-              <!-- .banner-txt -->
-              <div
-							class="caption fadeIn lfl banner-txt col-lg-5 tp-resizeme"
-							data-x="600"
-							data-y="180"
-							data-speed="700"
-							data-start="1700"
-							data-easing="easeOutBack">
-                <h1 class="courus">PyBursa<br>
-                  <span>лучшие онлайн курсы</span> </h1>
-                <p> Надоело собирать знания по крупицам? </p>
-                <button>Записаться</button>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <!-- /#banner -->
-
-    <!-- creative studio Start Here -->
-    <section class="creative_studio">
+  <!--Начало секции "хлебных крошек"-->
+    <div class="breadcrumb-section">
       <div class="container">
-        <div class="col-xs-12">
-          <div class="sec-title text-center">
-            <h1>We are a PyBursa</h1>
-            <h2>Description</h2>
+        <div class="row breadcrumbs">
+          <div class="col-xs-12 col-sm-8 col-md-8">
+            <h1 class="stud">Студенты курса PyBursa</h1>
+            <h2 class="stud">Ниже представлен список студентов, выпуск - декабрь 2015</h2>
           </div>
-          <div class="article-list wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0s">
-           
-            <p> Pybursa is a great place where you can learn basic Python and Django framework. Also you will be up to date with big number of useful tools/technologies such a pep8, CLI, git, csv, json, JS, jQuery, Ajax, HTTP, Firebug, Web Developer, MVC, QuerySet, Raw-sql unit-tests, selenium, nginx etc. You will defenetly enjoy it!</p>
-            <a class="btn blue wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0s" href="http://pybursa.com">PURCHASE NOW</a><a class="btn orange learn wow bounceInRight" data-wow-duration="1s" data-wow-delay="0s" href="http://pybursa.com">learn more</a> </div>
-        </div>
-      </div>
-    </section>
-    <!-- creative studio end Here -->
-
-
-    
-
-    <!-- responsive design Start Here -->
-    <section class="responsive-design">
-      <div class="container">
-        <div class="items col-xs-12 col-sm-12 col-md-6 wow bounceInLeft" data-wow-duration="0.5s" data-wow-delay="0s"> <img src="../static/images/responsive.png" alt="Guido Van Rossum"> </div>
-        <div class="items col-xs-12 col-sm-12 col-md-6 wow bounceInLeft" data-wow-duration="1s" data-wow-delay="0s">
-          <div class="section-title col-md-12">
-            <h2 class="title"> Program </h2>
-          </div>
-          <div class="responsive-list ">
-            <div class="items col-xs-12 col-sm-12 col-md-12">
-              <!-- Title And Content -->
-              <span class="icon icon-DesktopMonitor"></span>
-              <div class="content">
-                <h5 class="title">Основы Python</h5>
-                <ul>
-                                <li>zen, pep8, pylint, tools, IDE</li>
-                                <li>консоль, типы данных, операторы</li>
-                                <li>синтаксис управляющих конструкций (if, for...)</li>
-                                <li>исключения и разбор стектрейса</li>
-                                <li>кодировка в Python</li>
-                            </ul>
-                <a href="#" class="read-more">Read more >></a> </div>
-            </div>
-            <div class="items col-xs-12 col-sm-12 col-md-12">
-              <!-- Title And Content -->
-              <span class="icon icon-Layers"></span>
-              <div class="content">
-                <h5 class="title">Строки и итераторы</h5>
-                <ul>
-                                <li>работа со строками и итерируемыми типами</li>
-                                <li>запуск скрипта и параметры</li>
-                                <li>git http://try.github.com/levels/</li>
-                            </ul>
-                <a href="#" class="read-more">Read more >></a> </div>
-            </div>
+          <div class="col-xs-12 col-sm-4 col-md-4 pull-right text-right">
+            <ul class="breadcrumb">
+              <li> <i class="fa fa-home"> </i> <a href="index.html">Main</a> </li>
+              <li class="active"> Students </li>
+            </ul>
           </div>
         </div>
       </div>
-    </section>
-    <!-- responsive design end Here -->
- 
-    <!-- Our Partner Section Start Here-->
-    <section class="partner-site">
-      <div class="container">
-        <div class="sec-title text-center">
-          <h2 class="title"> We Worked With Awesome Clients </h2>
-        </div>
-        <div class="partner-list row" id="partner-list">
-          <div class="item"><a href="#"><img src="../static/images/client-logo-01.png" alt=""></a></div>
-          <div class="item"><a href="#"><img src="../static/images/client-logo-02.png" alt=""></a></div>
-          <div class="item"><a href="#"><img src="../static/images/client-logo-03.png" alt=""></a></div>
-          <div class="item"><a href="#"><img src="../static/images/client-logo-04.png" alt=""></a></div>
-          <div class="item"><a href="#"><img src="../static/images/client-logo-05.png" alt=""></a></div>
-        </div>
-      </div>
-    </section>
-    <!-- Our Partner Section End Here-->
-    <!-- purchase now Start Here -->
-
-    <!-- purchase now end Here -->
+    </div>
+    <!--Конец секции "хлебных крошек"-->
+    <br>
+       <center><div class="table-responsive">  <table class="table table-striped table-bordered table-nonfluid">
+        <thead>
+            <tr>
+                <th>No</th>
+                <th>Surname</th>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Skype</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a href="student_detail.html">1</a></td>
+                <td>Statham</td>
+                <td>Jason</td>
+                <td>Ukraine, Kharkov, st. Frankovskaya, 14, kv. 77</td>
+                <td>jason_statham</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Diesel</td>
+                <td>Vin</td>
+                <td>Ukraine, Donetsk, st. Frunze, 25, kv. 77</td>
+                <td>vin_diesel</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Chan</td>
+                <td>Jackie</td>
+                <td>Ukraine, Lviv, st. Kvitkova, 34, kv. 17</td>
+                <td>jackie_chan</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Cage</td>
+                <td>Nicolas</td>
+                <td>Ukraine, Kiev, st. Peremogu, 54, kv. 37</td>
+                <td>nikolas_cage</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Willis</td>
+                <td>Bruce</td>
+                <td>Ukraine, Cherkassy, st. Lenina, 14, kv. 77</td>
+                <td>bruce_willis</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Lopez</td>
+                <td>Jennifer</td>
+                <td>Ukraine, Struy, st. Gogolya, 12, kv. 35</td>
+                <td>jennifer_lopez</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Carrey</td>
+                <td>Jim</td>
+                <td>Ukraine, Odessa, st. 7 kilometr, 83</td>
+                <td>jim_carrey</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Cruise</td>
+                <td>Tom</td>
+                <td>Ukraine, Poltava, st. Snigna, 29, kv. 55</td>
+                <td>tom_cruise</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Jovovich</td>
+                <td>Mila</td>
+                <td>Ukraine, Kaniv, st. Obamu, 32, kv. 65</td>
+                <td>mila_jovovich</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Gomez</td>
+                <td>Selena</td>
+                <td>Ukraine, Lugansk, st. Lenina, 14, kv. 77</td>
+                <td>selena_gomez</td>
+            </tr>
+        </tbody>
+    </table>
+  </div></center>
   </div>
   <!-- site content end Here -->
 
