--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -23,7 +23,7 @@
 
         <div class="panel panel-default">
           <h1>Student of MyBursa course</h1>
-          <div class="panel-heading">There is a student list of MyBurse course</p>
+          <div class="panel-heading">There is a student list of MyBurse course</div>
 
         <table class="table">
             <tr>
