--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -12,11 +12,12 @@ html {
 }
 body {
     background-image: url(../images/b7.png);
+    background-image: white;
     background-position:center;
-    background-repeat:no-repeat;
+    background-repeat: 50% 0 no-repeat;
     background-attachment:fixed ; 
-    background-size:100%;
-    color: #fff;
+    background-size:cover;
+    color: red;
     margin: 0;
 }
 
@@ -1410,7 +1411,8 @@ a.bg-danger:focus {
 .page-header {
   padding-bottom: 9px;
   margin: 40px 0 20px;
-  border-bottom: 1px solid #eee;
+  background-color:#D7D7D0; 
+  opacity:0.8;
 }
 ul,
 ol {
@@ -2444,6 +2446,8 @@ table th[class*="col-"] {
 .table-responsive {
   min-height: .01%;
   overflow-x: auto;
+  background-color:#EBEBE3;
+  opacity: 1;
 }
 @media screen and (max-width: 767px) {
   .table-responsive {
@@ -2462,7 +2466,8 @@ table th[class*="col-"] {
   .table-responsive > .table > thead > tr > td,
   .table-responsive > .table > tbody > tr > td,
   .table-responsive > .table > tfoot > tr > td {
-    white-space: nowrap;
+    inherit-space: nowrap;
+    opacity: 0.6;
   }
   .table-responsive > .table-bordered {
     border: 0;
@@ -4638,17 +4643,19 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #FF1F3A;
+  background-color: #707070;
   border-color: #080808;
   opacity: 0.6;
 }
 .navbar-inverse .navbar-brand {
-  color: #9d9d9d;
+  color: #000000;
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
-  background-color: transparent;
+  color: #908B8A;
+  background-color: #290701;
+  border-color: #908B8A;
+  border-radius: 20px;
 }
 .navbar-inverse .navbar-text {
   color: #9d9d9d;
@@ -5008,29 +5015,34 @@ a.badge:focus {
 .jumbotron {
   padding-top: 30px;
   padding-bottom: 30px;
+  margin-top: 35px;
   margin-bottom: 30px;
-  color: #FFFFFF;
-  background-color: #49494B;
+  color: #D7D7D0;
+  background-color: #EBEBE3;
+  border-color:#290701;
   opacity: 0.8;
 }
 .jumbotron h1,
 .jumbotron .h1 {
-  color: inherit;
+ background-color:#D7D7D0;
 }
 .jumbotron p {
   margin-bottom: 15px;
   font-size: 21px;
   font-weight: 200;
+  background-color: #290701;
+  opacity:0.6;
 }
 .jumbotron > hr {
   border-top-color: #d5d5d5;
 }
 .container .jumbotron,
 .container-fluid .jumbotron {
-  border-radius: 6px;
+ border-radius: 6px;
 }
 .jumbotron .container {
-  max-width: 50%; 
+  max-width: 50%;
+   
 }
 #p {max-width:100%;}
 @media screen and (min-width: 768px) {
@@ -5053,9 +5065,10 @@ a.badge:focus {
   padding: 4px;
   margin-bottom: 20px;
   line-height: 1.42857143;
-  background-color: #fff;
+  background-color: #290701;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  opacity:1;
+  border-radius: 20px;
   -webkit-transition: border .2s ease-in-out;
        -o-transition: border .2s ease-in-out;
           transition: border .2s ease-in-out;
@@ -5304,13 +5317,13 @@ a.thumbnail.active {
   border: 1px solid #ddd;
 }
 .list-group-item:first-child {
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 .list-group-item:last-child {
   margin-bottom: 0;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 a.list-group-item,
 button.list-group-item {
@@ -5326,7 +5339,7 @@ a.list-group-item:focus,
 button.list-group-item:focus {
   color: #555;
   text-decoration: none;
-  background-color: #f5f5f5;
+  background-color: #290701;
 }
 button.list-group-item {
   width: 100%;
@@ -5733,22 +5746,25 @@ button.list-group-item-danger.active:focus {
   border-bottom: 1px solid #ddd;
 }
 .panel-default {
-  border-color: #ddd;
+  border-color: #290701;
+  opacity:0.8;
+  max-width: 70%;
+  margin-left:180px;
 }
 .panel-default > .panel-heading {
   color: #333;
-  background-color: #f5f5f5;
-  border-color: #ddd;
+  background-color: #EBEBE3;
+  border-color: #EBEBE3;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #ddd;
+  border-top-color: #EBEBE3;
 }
 .panel-default > .panel-heading .badge {
   color: #f5f5f5;
   background-color: #333;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #ddd;
+  border-bottom-color: #EBEBE3;
 }
 .panel-primary {
   border-color: #337ab7;
