--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,121 +1,54 @@
-.list-group-a
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-a {
-  float: right;
-}
-.list-group-a {
-  margin-right:5px;
-}
-.list-group-b
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-b {
-  float: right;
-}
-.list-group-b {
-  margin-right:5px;
-}
-.list-group-c
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-c {
-  float: right;
-}
-.list-group-c {
-  margin-right:5px;
-}
-.list-group-d
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-d {
-  float: right;
-}
-.list-group-d {
-  margin-right:5px;
-}
-.list-group-e
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-e {
-  float: right;
-}
-.list-group-e {
-  margin-right:5px;
-}
-.list-group-f
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-f {
-  float: right;
-}
-.list-group-f {
-  margin-right:5px;
-}
-.list-group-g
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-g {
-  float: right;
-}
-.list-group-g {
-  margin-right:5px;
-}
-.list-group-h
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-h {
-  float: right;
-}
-.list-group-h {
-  margin-right:5px;
-}
-.list-group-i
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-i {
-  float: right;
-}
-.list-group-i {
-  margin-right:5px;
-}
-.list-group-j
- {font-size: 30px;
-  color: #A50305;
-  background-color: #fff;
-}
-.list-group-j {
-  float: right;
-}
-.list-group-j {
-  margin-right:5px;
-}
-.jumbotron .container .head {color:#FFFFFF}
-.thumbnail .caption .D {color:red;}
-.thumbnail .caption .M {color:red;}
-.thumbnail .caption .F {color:red;}
-.thumbnail .caption .D1 {color:#333;}
-.thumbnail .caption .M1 {color:#333;}
-.thumbnail .caption .F1 {color:#333;}
-.thumbnail .imgD {width:150px;height:180px;}
-.thumbnail .imgM {width:150px;height:180px;}
-.thumbnail .imgF {width:150px;height:180px;}
+#pb {color:#290701;}
+.topping_index {background-color:#EBEBE3;margin-top:35px;border:none;height:30px;}
+.des {color:#290701;}
+.panel-default .panel-heading .py_program {color:#290701;background-color:#f0ad4e;}
+.jumbotron .container .head {color:#290701;}
+.jumbotron .container .text {color:#290701;}
+.table-responsive .headtable {background-color:#f0ad4e;}
+.table-responsive .value {background-color:#61B85E; opacity:1;color:#290701;}
+.table-responsive .value2 {background-color:#EE821D; opacity:1;color:#290701;}
+.table-responsive .value3 {background-color:red; opacity:1;color:#290701;}
+.table-responsive .tablelist {background-color:#8EE99C; opacity:1;color:#290701;}
+.table-responsive .tablelist2 {background-color:#E99042; opacity:1;color:#290701;}
+.table-responsive .tablelist3 {background-color:#EE5B5B; opacity:1;color:#290701;}
+.table-responsive .them {background-color:#D7D7D0; opacity:1;color:#290701;}
+
+
+.topping_contacts {background-color:#EBEBE3;margin-top:35px;border:none;height:30px;}
+.thumbnail .imgd {width:150px;height:160px;border-radius: 40px;}
+.thumbnail .imgm {width:150px;height:200px;border-radius: 40px;}
+.thumbnail .imgf {width:150px;height:160px;border-radius: 40px;}
+.d {background-color:#D7D7D0;color:#290701;}
+.m {background-color:#D7D7D0;color:#290701;}
+.f {background-color:#D7D7D0;color:#290701;}
+.d1 {background-color:#D7D7D0;color:#290701;}
+.m1 {background-color:#D7D7D0;color:#290701;}
+.f1 {background-color:#D7D7D0;color:#290701;}
+.info {background-color:#EBEBE3;opacity:0.8;}
+.page-header .contact-head {color:#290701; margin-left:30px;}
+.below-contact {color:#290701; margin-left:30px;}
+
+.topping_students {background-color:#EBEBE3;margin-top:35px;border:none;height:30px;}
+.page-header .student-head {color:#290701; margin-left:30px;}
+.below-header {color:#290701; margin-left:30px;}
+.panel-default .panel-heading .course_program {color:#290701;background-color:#f0ad4e;margin-left:15px;}
+.study_table {margin-left:-180px;}
+.table-hover .headtable_student {background-color:#f0ad4e;}
+.table-hover .head_study_table {background-color:#ECD92B;}
+.table-hover .row_table_student {background-color:#EBEBE3;}
+
+
+
+.topping_details {background-color:#EBEBE3;margin-top:35px;border:none;height:30px;}
+.page-header .person-head {color:#290701; margin-left:30px;margin-top:0px;}
+.below-person {color:#290701; margin-left:30px;}
+.self_photo {background-size:cover;background-repeat: 50% 0 no-repeat;border-radius:40px;margin-left:30px;height:300px;width:250px;}
+.self_info {background-color:#EBEBE3;margin-top:30px; opacity:0.8;}
+.self_info_text{background-color:#EBEBE3 ;color:#290701;margin-left:30px; }
+.table-hover .head_self_table {background-color:#ECD92B;}
+.panel-default .panel-heading .self_course_program {color:#290701;background-color:#f0ad4e;margin-left:15px;}
+.panel-default .panel-heading .self_raiting {color:#290701;background-color:#337ab7;margin-left:15px;}
+.raiting_row {background-color:#5bc0de;}
+
+
 
