--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,35 +17,36 @@
     <![endif]-->
   </head>
   <body>
+<hr class="topping_contacts"></hr>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <div class="btn-group">
-             <button aria-controls="navbar" aria-expanded="false" class=
-                "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-                "collapse" type="button"><span class="sr-only">Toggle
-                navigation</span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a> <a class=
-                "navbar-brand" href="contact.html">Contacts</a>
-            </div>
-           </div>
-        </div>
-        <div class="collapse nav-coll" id="bs-example-navbar-collapse-1">
-        </div>
-        </div>
-      </nav>
-      <div class="jumbotron">
-        <div  class="container">
-          <h1 class="head">Contacts</h1>
-        </div>
-      </div>
+      <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.html">Main</a>
+      <a class="navbar-brand" href="#">Contacts</a>
+      <a class="navbar-brand" href="student_list.html">Students</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+      <div class="page-header">
+  <h1 class="contact-head">Contacts</h1>
+    <p class="below-contact">Contact informations of ItBursa Organization</p>
+</div>
       <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img class="imgD" src="../static/images/boss.jpg" alt="...">
+        <img class="imgd" src="../static/images/boss.jpg" alt="...">
         <div class="caption">
-          <h3 class="D">Director</h3>
-          <p class="D1">Name: Алексей Радченко<br>
+          <h3 class="d">Director</h3>
+          <p class="d1">Name: Алексей Радченко<br>
              skype: <br>
              e-mail: <br>
              phone:
@@ -55,22 +56,23 @@
     </div>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img class="imgM" src="../static/images/manadg.jpg" alt="...">
+        <img class="imgm" src="../static/images/manadg.jpg" alt="...">
         <div class="caption">
-          <h3 class="M">Manager</h3>
-          <p class = "M1">Name: Дария Михалевич<br>
+          <h3 class="m">Manager</h3>
+          <p class = "m1">Name: Дария Михалевич<br>
              skype: darka.darka.darka.darka.<br>
              e-mail: daria.mykhalevych@gmail.com<br>
              phone:</p>
         </div>
       </div>
     </div>
+    <div class="info">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <img class="imgF" src="../static/images/founder.jpg" alt="...">
+        <img class="imgf" src="../static/images/founder.jpg" alt="...">
         <div class="caption">
-          <h3 class="F">Founder</h3>
-          <p class= "F1">Name: Павел Обод<br>
+          <h3 class="f">Founder</h3>
+          <p class= "f1">Name: Павел Обод<br>
              skype: azaless<br>
              e-mail: itbursa100@gmail.com<br>
              phone:
@@ -78,6 +80,7 @@
         </div>
       </div>
     </div>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../static/js/bootstrap.js"></script>
   </body>
