--- a/templates/index.html
+++ b/templates/index.html
@@ -18,30 +18,31 @@
     <![endif]-->
   </head>
   <body>
+    <hr class="topping_index"></hr>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
-        <div class="navbar-header">
-          <div class="btn-group">
-            <ul class="nav nav-pills">
-              <button aria-controls="navbar" aria-expanded="false" class=
-                "navbar-toggle collapsed" data-target="#navbar" data-toggle=
-                "collapse" type="button"><span class="sr-only">Toggle
-                navigation</span> <span class="icon-bar"></span> <span class=
-                "icon-bar"></span> <span class="icon-bar"></span></button>
-                <a class="navbar-brand" href="index.html">Main</a> <a class=
-                "navbar-brand" href="contact.html">Contacts</a>
-            </ul>
-          </div>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        </div>
-      </div>
-    </nav>
+      <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Main</a>
+      <a class="navbar-brand" href="contact.html">Contacts</a>
+      <a class="navbar-brand" href="student_list.html">Students</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     <div class="jumbotron">
       <div class="container">
 	<div class="bursa">
-          <h1 class="bursa">Python Bursa</h1>
-          <h2>Description</h2>
+          <h1 id="pb" class="bursa">Python Bursa</h1>
+          <h2 class="des">Description</h2>
           <p>В этом PyBursa мы сместили акцент в сторону практики.
              Будет умеренное количество теории - максимум практики.
              Примерное соотношение теории и практики: 30% на 70%
@@ -51,34 +52,189 @@
         </div>
       </div>
     </div>
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Program</h1>
-        <ul class="list-group">
-          <li class="list-group-item">Основы Python </li>
-          <li class="list-group-a">Строки и итераторы</li>
-          <li class="list-group-item">Функции и модульность</li>
-          <li class="list-group-b">Библиотеки и пакетный менеджер</li>
-          <li class="list-group-item">Классы и ООП, основы</li>
-          <li class="list-group-c">Классы и ООП, возможности Python</li>
-          <li class="list-group-item">Работа с файлами</li>
-          <li class="list-group-d">Работа с датами</li>
-          <li class="list-group-item">Основы html/css</li>
-          <li class="list-group-e">Основы JavaScript</li>
-          <li class="list-group-item">Основы Web, HTTP</li>
-          <li class="list-group-f">Django first steps</li>
-          <li class="list-group-item">Структура Web приложения</li>
-          <li class="list-group-g">Работа с базами данных, ORM</li>
-          <li class="list-group-item">Кастомизация админки</li>
-          <li class="list-group-h">Язык шаблонов</li>
-          <li class="list-group-item">Forms</li>
-          <li class="list-group-i">Class-based (Generic) Views</li>
-          <li class="list-group-item">Реализация стандартных задач</li>
-          <li class="list-group-j">Средства отладки и тестирование</li>
-          <li class="list-group-item">Деплоймент</li>
-        </ul>
-      </div>
-    </div>
+    
+<div class="panel panel-default">
+  <!-- Default panel contents -->
+  <div class="panel-heading"><h2 class="py_program">Program</h2></div>
+
+  <!-- Table -->
+  <table class="table-responsive">
+    <tr class="headtable"><td><h3>#</h3></td><td><h3>Theme</h3></td><td><h3>Value</h3></td><tr>
+   <tr class="tablelist"><td><h3>1</h3></td><td><div class="them"><h3>Основы Python</h3></div></td><td><p>
+     <div class="value">
+      <li>zen, pep8, pylint, tools, IDE</li>
+      <li>консоль, типы данных, операторы </li>
+      <li> синтаксис управляющих конструкций (if, for...)</li>
+      <li>исключения и разбор стектрейса</li>
+      <li>кодировка в Python</li>
+     </div>                                                                              
+   </p></td><tr>
+<tr class="tablelist"><td><h3>2</h3></td><td><div class="them"><h3>Строки и итераторы</h3></div></td><td><p>
+<div class="value">
+<li>работа со строками и итерируемыми типами</li>
+<li>запуск скрипта и параметры </li>
+<li>git http://try.github.com/levels/ </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist"><td><h3>3</h3></td><td><div class="them"><h3>Функции и модульность</h3></div></td><td><p>
+<div class="value">
+<li>функции (def, lambda)</li>
+<li>генераторы списков</li>
+<li>модули, структура </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist"><td><h3>4</h3></td><td><div class="them"><h3>Библиотеки и пакетный менеджер</h3></div></td><td><p>
+<div class="value">
+<li>встроенные библиотеки http://docs.python.org/</li>
+<li>сторонние библиотеки (менеджер пакетов) PYPI </li>
+<li>PYTHONPATH и виртуальное окружение  </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist"><td><h3>5</h3></td><td><div class="them"><h3>Классы и ООП, основ</h3></div></td><td><p>
+<div class="value">
+<li>синтаксис, атрибуты, методы, инстанцирование </li>
+<li>все объект, служебные методы </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist"><td><h3>6</h3></td><td><div class="them"><h3>Классы и ООП, возможности Python</h3></div></td><td><p>
+<div class="value">
+<li>инкапсуляция, наследование, полиморфизм </li>
+<li>переопределение методов </li>
+<li>super </li>
+<li> абстрактные классы</li>
+<li>статические методы </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist"><td><h3>7</h3></td><td><div class="them"><h3>Работа с файлами</h3></div></td><td><p>
+<div class="value">
+<li> запись и чтение файлов</li>
+<li>методы объектов-файлов </li>
+<li>csv, json </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>8</h3></td><td><div class="them"><h3>Работа с датами</h3></div></td><td><p>
+<div class="value2">
+<li>модуль datetime </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>9</h3></td><td><div class="them"><h3>Основы html/css</h3></div></td><td><p>
+<div class="value2">
+<li> html - теги и свойства</li>
+<li>css - свойства и селекторы </li>
+<li> каскадное переопределение свойств</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>10</h3></td><td><div class="them"><h3>Основы JavaScript</h3></div></td><td><p>
+<div class="value2">
+<li>Зачем разработчику backend нужно знать js? </li>
+<li> DOM</li>
+<li> JS, jQuery, Ajax</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>11</h3></td><td><div class="them"><h3>Основы Web, HTTP</h3></div></td><td><p>
+<div class="value2">
+<li>Django. “Hello world!” </li>
+<li>HTTP (GET, POST), (200, 404, 500), headers, cookies </li>
+<li> Инструменты отладки браузера (Firebug, Web Developer)</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>12</h3></td><td><div class="them"><h3>Django first steps</h3></div></td><td><p>
+<div class="value2">
+<li> почему django?</li>
+<li>введение и описание фреймворка </li>
+<li>старт проекта </li>
+<li> команды manage.py</li>
+<li>django.contrib </li>
+<li>авторизация, django.contrib.auth </li>
+<li>админка</li>
+<li>статика</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>13</h3></td><td><div class="them"><h3>Структура Web приложения</h3></div></td><td><p>
+<div class="value2">
+<li> MVC</li>
+<li>Views </li>
+<li>роутинг урлов, передача параметров </li>
+<li> объект реквест</li>
+<li> объект респонс</li>
+<li>обработка реквеста, формирование респонса </li>
+<li>обработка и изменение хедеров</li>
+<li>мидлвар</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist2"><td><h3>14</h3></td><td><div class="them"><h3>Работа с базами данных, ORM</h3></div></td><td><p>
+<div class="value2">
+<li>модели и поля, типы полей и атрибуты </li>
+<li> связи между таблицами и проектирование БД</li>
+<li>миграции </li>
+<li>фикстуры </li>
+<li> QuerySet</li>
+<li>Raw-sql </li>
+</div>                                                                              
+</h3></td><tr>
+<tr class="tablelist3"><td><h3>15</h3></td><td><div class="them"><h3>Кастомизация админки</h3></div></td><td><p>
+<div class="value3">
+<li>Класс админки</li>
+<li> настройка отображения виджетов</li>
+<li> кастомизация ItemView, ListView, редактирование в ListView</li>
+<li>Сортировка, фильтры, поиск admin actions, редактирование полей в ListView </li>
+<li>admin actions, редактирование полей в ListView </li>
+<li>Admin dashboard </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist3"><td><h3>16</h3></td><td><div class="them"><h3>Язык шаблонов</h3></div></td><td><p>
+<div class="value3">
+<li> Синтаксис, логические конструкции
+теги и фильтры</li>
+<li> наследование и includes</li>
+<li>Понятие контекста, контекст процессор </li>
+<li> теги и фильтры</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist3"><td><h3>17</h3></td><td><div class="them"><h3>Forms</h3></div></td><td><p>
+<div class="value3">
+<li> Формы</li>
+<li>Типы полей </li>
+<li> Виджеты</li>
+<li>Атрибуты </li>
+<li>Валидация </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist3"><td><h3>18</h3></td><td><div class="them"><h3>Class-based (Generic) Views</h3></div></td><td><p>
+<div class="value3">
+<li> Встроенные class-based views (TemplateView, ListView, ItemView)</li>
+<li> Использование форм с class-based views</li>
+<li>Миксины </li>
+</div>                                                                              
+</h3></td><tr>
+<tr class="tablelist3"><td><h3>19</h3></td><td><div class="them"><h3>Реализация стандартных задач</h3></div></td><td><p>
+<div class="value3">
+<li>Отправка емейл </li>
+<li>Кеширование </li>
+<li> Интернационализация</li>
+<li> Signup/Login</li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist3"><td><h3>20</h3></td><td><div class="them"><h3>Средства отладки и тестирование</h3></div></td><td><p>
+<div class="value3">
+<li>logging </li>
+<li>pdb </li>
+<li>debug toolbar </li>
+<li>extensions </li>
+<li>unit-tests </li>
+<li>selenium </li>
+</div>                                                                              
+</p></td><tr>
+<tr class="tablelist3"><td><h3>21</h3></td><td><div class="them"><h3>Деплоймент</h3></div></td><td><p>
+<div class="value3">
+<li>nginx </li>
+<li>Управление статикой </li>
+<li>Деплоймент </li>
+</div>                                                                              
+</p></td><tr>
+
+  </table>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
