--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -34,7 +34,7 @@
     </nav>
     <div class="row">
       <div id="student_detail" class="col-md-4">
-        <p>Korben Dallas</p>
+        <h3>Korben Dallas</h3>
         <p><img src="../static/images/Korben.jpg" alt="Korben"></p>
         <p><a class="btn btn-default" role="button">Студент о себе&raquo;</a></p>
       </div>
@@ -79,7 +79,7 @@
               <td>Korban</td>
             </tr>
             <tr>
-              <td class="column_data">Patronomic</td>
+              <td class="column_data">Patronymic</td>
               <td>Saint</td>
             </tr>
             <tr>
@@ -103,7 +103,7 @@
               <td>1, The 23rd of August st., Kharkiv city, Ukraine</td>
             </tr>
             <tr>
-              <td class="column_data">Post</td>
+              <td class="column_data">E-mail</td>
               <td>lilu@email.com</td>
             </tr>
             <tr>
