Students_detail changed

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Students</title>
+    <title>Vakulenko O.</title>
 
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.css" rel="stylesheet">
@@ -48,7 +48,7 @@
 </nav>
 <h1>Vakulenko Olena</h1>
 <img src="../static/images/olena.jpg" alt="olena">
-  <table class="table">
+  <table class="table table-striped table-hover">
       <caption>Student's card</caption>
         <tbody>
         <tr>
@@ -90,7 +90,7 @@
       </tbody>
     </table>
 
-    <table class="table">
+    <table class="table table-striped table-hover">
       <caption>Perfirmance</caption>
       <thead>
         <tr>
