--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -45,8 +45,8 @@
   </div><!-- /.container-fluid -->
   </nav>
   <div class="container">
-    <h1>Студенты PDBursa</h1>
-    <p>Продолжительность обучения 9 недель: 19.10.2015 - 20.12.2015</p>
+    <h1 class="size">Студенты PDBursa</h1>
+    <p class="size1">Продолжительность обучения 9 недель: 19.10.2015 - 20.12.2015</p>
   </div>
   <table class="table1" style="color:#9932CC">
   <tr>
