--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -128,24 +128,24 @@
           <tr>
             <td rowspan="5">PY101 Введение в Python</td>
             <td rowspan="3">Week 1</td>
-            <td>test</td>
+            <td>Tests</td>
             <td>99%</td>
           </tr>
           <tr>
-            <td>Problem task No 1</td>
+            <td>Problem Task № 1</td>
             <td>100%</td>
           </tr>
           <tr>
-            <td>Problem task No 2</td>
+            <td>Problem Task № 2</td>
             <td>100%</td>
           </tr>
           <tr>
             <td rowspan="2">Week 2</td>
-            <td>Test</td>
+            <td>Tests</td>
             <td>100%</td>
           </tr>
           <tr>
-            <td>Problem task No 1</td>
+            <td>Problem Task № 1</td>
             <td>100%</td>
           </tr>
         </tbody>
