--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,6 +23,7 @@
                     <nav>
                         <ul class="nav masthead-nav">
                             <li><a href="index.html"> Main </a></li>
+                            <li><a href="student_list.html"> Students </a></li>
                             <li class="active"><a href="contact.html"> Contacts </a></li>
                         </ul>
                     </nav>
@@ -35,9 +36,6 @@
                      <img src="../static/images/Shocked-Pups.jpg">
                  </div>
              </div>
-
-
-            <hr>
 
             <div class="inner cover">
 
