--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
                     <nav>
                         <ul class="nav masthead-nav">
                             <li class="active"><a href="index.html"> Main </a></li>
+                            <li><a href="student_list.html"> Students </a></li>
                             <li><a href="contact.html"> Contacts </a></li>
                         </ul>
                     </nav>
