--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -71,17 +71,13 @@
 	</section> <!-- /.section-background -->
 
 
-<!-- Price Table -->
 	<section class="price-table">
 		<div class="container section-wrapper">
 			<h2 class="section-title black">
 				PyBursa Students table
 			</h2> <!-- /.section-title -->
-			<p class="section-title black">Mart-April 2015</p>
+			<p class="section-title black">PyBursa Students Mart-April 2015</p>
 			<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-body">
-  </div>
 
   <!-- Table -->
   <table class="table">
