--- a/static/css/section.css
+++ b/static/css/section.css
@@ -69,3 +69,42 @@
 	color: #fff;
 	border: 1px solid #fff;
 }
+
+.header
+{
+	background: url('../images/multipage-header.jpg');
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-attachment: fixed;
+	height: 100vh;
+	color: #fff;
+	text-transform: uppercase;
+
+}
+
+.header-table{
+	display: table;
+	height: 70vh;
+	width: 100%;
+}
+
+.portfolio-img .port-item{
+	width: 100%;
+	height: auto;
+	transition: all .6s ease-in-out;
+}
+
+.portfolio-img:hover .portfolio-img-hover{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	transition: all .6s ease-in-out;
+	background: rgba(0, 0, 0, 0.5);
+}
+
+.portfolio-img:hover .port-item{
+	transform: scale(1.1);
+}
