--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,8 @@
 			<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no"/>
 		<title>PyBursa</title>
-
+		
+		<link rel="stylesheet" href="../static/css/section.css">
 		<link rel="stylesheet" href="../static/css/bootstrap.min.css">
 		<link rel="stylesheet" href="../static/css/style.css">
 	    <link rel="stylesheet" href="../static/css/one-page.css">
