--- a/templates/contact.html
+++ b/templates/contact.html
@@ -30,7 +30,7 @@
           </div>
             <ul class="nav nav-pills">
               <li role="presentation"><a class="passive" href="index.html">Main</a></li>
-              <li role="presentation" class="active"><a class="active" href="contact.html">Contacts</a></li>
+              <li role="presentation" class="active"><a>Contacts</a></li>
               <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
         </div>
