--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation" class="active"><a class="active" href="index.html">Main</a></li>
+              <li role="presentation" class="active"><a>Main</a></li>
               <li role="presentation"><a class="passive" href="contact.html">Contacts</a></li>
               <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
