--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@ body {background-color: #eee }
 .navbar-brand {padding-top: 2px; padding-left: 15px}
 .nav-pills {padding-top: 5px; padding-left: 60px}
 .active {font-weight: bold; font-family: Courier New; font-size: 18px}
+.active a {font-weight: bold; font-family: Courier New; font-size: 18px}
 .passive {font-family: Courier New; font-size: 18px}
 .headline {text-align: center; font-family: Courier New}
 h1 {font-weight: bold}
