--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -26,7 +26,7 @@
             </a>
           </div>
             <ul class="nav nav-pills">
-              <li role="presentation"><a class="passive" href="index.html">Main</a></li>
+              <li role="presentation" class="passive"><a href="index.html">Main</a></li>
               <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
               <li role="presentation" class="passive"><a href="student_list.html">Students</a></li>
             </ul>
