--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -33,7 +33,7 @@
             <ul class="nav nav-pills">
               <li role="presentation"><a class="passive" href="index.html">Main</a></li>
               <li role="presentation" class="passive"><a href="contact.html">Contacts</a></li>
-              <li role="presentation" class="active"><a class="active" href="student_list.html">Students</a></li>
+              <li role="presentation" class="active"><a>Students</a></li>
             </ul>
         </div>
       </nav>
