--- a/templates/index.html
+++ b/templates/index.html
@@ -29,17 +29,16 @@
       <div class="container">
         <div class="row ">
           <ul class="contact-detail2 col-sm-5 pull-left">
-            <li> <a href="#" target="_blank"><i class="fa fa-phone"></i> + 38 (096) 469 15 57</a> </li>
-            <li> <a href="#" target="_blank"><i class="fa fa-envelope-o"></i> daria.mykhalevych@gmail.com</a> </li>
+            <li> <em class="fa fa-phone"></em> 38 (096) 469 15 57 </li>
+            <li> <i class="fa fa-envelope-o"></i> daria.mykhalevych@gmail.com </li>
           </ul>
           <div class="social-links col-xs-12 col-sm-7 pull-right">
             <ul class="social-icons hidden-xs pull-right">
-              <li> <a href="https://www.facebook.com/pages/It-Bursa/1539330322946469" target="_blank"><i class="fa fa-facebook-square"></i></a> </li>
-              <li> <a href="http://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a> </li>
-              <li> <a href="http://pinterest.com" target="_blank"><i class="fa fa-pinterest"></i></a> </li>
-              <li> <a href="https://vk.com/public82364378" target="_blank"><i class="fa fa-vk"></i></a> </li>
-              <li> <a href="http://pinterest.com" target="_blank"><i class="fa fa-dribbble"></i></a> </li>
-            </ul>
+              <li> <i class="fa fa-facebook-square"></i> </li>
+              <li> <i class="fa fa-twitter"></i></li>
+              <li> <i class="fa fa-pinterest"></i> </li>
+              <li> <i class="fa fa-vk"></i> </li>
+              </ul>
           </div>
         </div>
       </div>
@@ -271,25 +270,27 @@ WEB разработки </p>
   </div>
   <!-- site content end Here -->
 
-  <!-- Footer Section Start Here -->
+ <!-- Footer Section Start Here -->
   <footer id="footer">
     <section class="footer">
       <div class="container">
         <div class="col-xs-12 col-sm-3 abt">
           <h5 class="title">Футер #1</h5>
-          <div class="footer-logo"> </div>
+          
           <p>За стеклом лежал Питон,</p>
           <p>Большой и толстый, как батон.</p>
           <p>Вверх пополз,</p>
           <p>Затем вернулся,</p>
           <p>Круглым бубликом свернулся. </p>
-          <a href="#" class="read-more">Подробнее... &raquo;</a> </div>
+           </div>
         <div class="col-xs-12 col-sm-3 popular-post">
           <h5 class="title">Футер #2</h5>
-          <p><a href="#">Ссылка№1 <span>Ноябрь 12, 2015</span> </a></p>
-          <p><a href="#" >Ссылка№2 <span>Ноябрь 13, 2015</span></a> </p>
-          <p><a href="#">Ссылка№3 <span>Ноябрь 14, 2015</span> </a> </p>
-          <p><a href="#" >Ссылка№4 <span>Ноябрь 15, 2015</span></a> </p>
+          <p>PyBursa Text</p>
+          <p>PyBursa Text</p>
+          <p>PyBursa Text</p>
+          <p>PyBursa Text</p>
+          <p>PyBursa Text</p>
+          
         </div>
         <div class="col-xs-12 col-sm-3 service">
           <h5 class="title">Футер #3</h5>
@@ -299,7 +300,7 @@ WEB разработки </p>
             <li>CRM Development</li>
             <li>Web Maintanance</li>
             <li>Search Engine Optimization</li>
-            <li>Business Conssultation</li>
+            
           </ul>
         </div>
         <div class="col-xs-12 col-sm-3 touch">
@@ -307,12 +308,7 @@ WEB разработки </p>
           <p> <i class="fa fa-map-marker"></i> <span>Где-то в Харькове... </span></p>
           <p> <i class="fa fa-phone"></i> <span>+ 38 (096) 469 15 57 </span></p>
           <p> <i class="fa fa-envelope"></i> <span>daria.mykhalevych@gmail.com </span></p>
-          <ul class="social">
-            <li><a href="https://www.facebook.com/pages/It-Bursa/1539330322946469" class="hvr-radial-out "><i class="fa fa-facebook"></i></a></li>
-            <li><a href="https://vk.com/public82364378" class="hvr-radial-out "><i class="fa fa-vk"></i></a></li>
-            <li><a href="#" class="hvr-radial-out "><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#" class="hvr-radial-out "><i class="fa fa-linkedin"></i></a></li>
-          </ul>
+
         </div>
       </div>
       <div class="copyright">
@@ -331,13 +327,13 @@ WEB разработки </p>
 			================================================== -->
 </div>
 <script src="../static/js/jquery.min.js"></script>
+
 <script type="text/javascript" src="../static/js/owl.carousel.js"></script>
 <script type="text/javascript" src="../static/js/owl.carousel.min.js"></script>
-<script type="text/javascript" src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/jquery.themepunch.tools.min.js"></script> <!-- Revolution Slider Tools -->
+<script src="../static/js/jquery.themepunch.revolution.min.js"></script>
 <script type="text/javascript" src="../static/js/jquery.prettyPhoto.js"></script>
 <script src="../static/js/wow.min.js"></script>
-<script src="../static/js/jquery.themepunch.tools.min.js"></script> <!-- Revolution Slider Tools -->
-<script src="../static/js/jquery.themepunch.revolution.min.js"></script> <!-- Revolution Slider -->
 <script type="text/javascript" src="../static/js/site.js"></script>
 </body>
 </html>
