Modified old files

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -118,6 +118,8 @@
                                     <th class="text-center">Week</th>
                                     <th class="text-center">Control Type</th>
                                     <th class="text-center">Grade</th>
+                                    <th class="text-center">Average</th>
+                                    <th class="text-center">Rating</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -126,30 +128,40 @@
                                     <td class="text-center">Week 1</td>
                                     <td class="text-center">Tests</td>
                                     <td class="text-center">98%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
                                 </tr>
                                 <tr>
                                     <td></td>
                                     <td></td>
                                     <td>Problem task № 1</td>
                                     <td>100%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
                                 </tr>
                                 <tr>
                                     <td></td>
                                     <td></td>
                                     <td>Problem task № 2</td>
                                     <td>100%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
                                 </tr>
                                 <tr>
                                     <td></td>
                                     <td>Week 2</td>
                                     <td>Tests</td>
                                     <td>100%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
                                 </tr>
                                 <tr>
                                     <td></td>
                                     <td></td>
                                     <td>Problem task № 1</td>
                                     <td>100%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
                                 </tr>
                             </tbody>
                         </table>
