--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,28 +9,27 @@
 /*@import url("../fonts/font-awesome/css/font-awesome.min.css");*/
 
 li {
-  list-style: none;
+    list-style: none;
 }
 
-.inner a{
-  color: #327AAA;
+.inner a {
+    color: #327AAA;
 }
 
 a:focus,
 a:hover {
-  color: #fff;
+    color: #fff;
 }
 
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
 .btn-default:focus {
-  color: #333;
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
+    color: #333;
+    text-shadow: none; /* Prevent inheritence from `body` */
+    background-color: #fff;
+    border: 1px solid #fff;
 }
-
 
 /*
  * Base structure
@@ -38,12 +37,13 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
+
 body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, .5);
 }
 
 .color-black {
@@ -63,127 +63,134 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
+    display: table;
+    width: 100%;
+    height: 100%; /* For at least Firefox */
+    min-height: 100%;
 }
+
 .site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
+    display: table-cell;
+    vertical-align: top;
 }
+
 .cover-container {
-  margin-right: auto;
-  margin-left: auto;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* Padding for spacing */
 .inner {
-  padding: 30px;
+    padding: 30px;
 }
-
 
 /*
  * Header
  */
 .masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .masthead-nav > li {
-  display: inline-block;
+    display: inline-block;
 }
+
 .masthead-nav > li + li {
-  margin-left: 20px;
+    margin-left: 20px;
 }
+
 .masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
+    padding-right: 0;
+    padding-left: 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff; /* IE8 proofing */
+    color: rgba(255, 255, 255, .75);
+    border-bottom: 2px solid transparent;
 }
+
 .masthead-nav > li > a:hover,
 .masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
+    background-color: transparent;
+    border-bottom-color: #a9a9a9;
+    border-bottom-color: rgba(255, 255, 255, .25);
 }
+
 .masthead-nav > .active > a,
 .masthead-nav > .active > a:hover,
 .masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
+    color: #fff;
+    border-bottom-color: #fff;
 }
 
 @media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
+    .masthead-brand {
+        float: left;
+    }
 
+    .masthead-nav {
+        float: right;
+    }
+}
 
 /*
  * Cover
  */
 
 .cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
+    padding: 0 20px;
 }
 
+.cover .btn-lg {
+    padding: 10px 20px;
+    font-weight: bold;
+}
 
 /*
  * Footer
  */
 
 .mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+    color: #999; /* IE8 proofing */
+    color: rgba(255, 255, 255, .5);
 }
-
 
 /*
  * Affix and center
  */
 
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
+    /* Pull out the header and footer */
+    .masthead {
+        position: fixed;
+        top: 0;
+    }
+
+    .mastfoot {
+        position: fixed;
+        bottom: 0;
+    }
+
+    /* Start the vertical centering */
+    .site-wrapper-inner {
+        vertical-align: middle;
+    }
+
+    /* Handle the widths */
+    .masthead,
+    .mastfoot,
+    .cover-container {
+        width: 100%; /* Must be percentage or pixels for horizontal alignment */
+    }
 }
 
 @media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 700px;
-  }
+    .masthead,
+    .mastfoot,
+    .cover-container {
+        width: 700px;
+    }
 }
 
 .wrapper-2 {
@@ -192,67 +199,75 @@ body {
     padding-top: 100px;
 }
 
-footer p, a{
+footer p, a {
     color: #000000;
 }
-footer a{
+
+footer a {
     padding-right: 20px;
 }
 
 .green {
-  color: #4caf50
+    color: #4caf50
 }
+
 .red {
-  color: #f44336;
+    color: #f44336;
 }
+
 .cyan {
-  color: #00bcd4 ;
+    color: #00bcd4;
 }
 
 .purple-lighten-3 {
-  color: #ce93d8;
+    color: #ce93d8;
 }
+
 .amber {
-  color: #ffc107;
+    color: #ffc107;
 }
+
 .deep-orange-darken-1 {
-  color: #f4511e;
+    color: #f4511e;
 }
+
 .pink-darken-4 {
-  color: #880e4f;
+    color: #880e4f;
 }
 
 .container img {
-  width: 600px;
+    width: 600px;
 }
 
 .commands {
-  margin-top: 150px;
+    margin-top: 150px;
 }
 
 .margin-top-block {
-  margin-top: 150px;
+    margin-top: 150px;
 }
 
 .detail-block {
-  margin-top: 70px;
+    margin-top: 70px;
 }
 
 .divider {
-  height: 2px;
-  overflow: hidden;
-  background-color: #303030;
+    height: 2px;
+    overflow: hidden;
+    background-color: #303030;
 }
 
-.info-course li  {
-  background-color: #fff;
-  line-height: 1.5rem;
-  padding: 10px 20px;
-  margin: 0;
+.info-course li {
+    background-color: #fff;
+    line-height: 15px;
+    padding: 10px 20px;
+    margin: 0;
 }
-.info-course li  a:hover {
-  color: #843534;
+
+.info-course li a:hover {
+    color: #843534;
 }
+
 .white {
-  background-color: #fff;
+    background-color: #fff;
 }
