--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -39,7 +39,7 @@
                     <h1>Студенты курса PyBursa, поток №_1</h1>
                     <p>
                         <span>
-                            Студенты курса PyBursa, поток №_1 набор октябрь 2015г.
+                            Students of the course PyBursa, flow №_1 set in October 2015
                         </span>
                     </p>
                     <div class="table-responsive">
