--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -35,8 +35,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="#">Contacts <span class="sr-only">(current)</span></a></li>
-<li><a href="student_list.html">Students</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li class="active"><a href="#">Students <span class="sr-only">(current)</span></a></li>        
           </ul>
         </li>
       </ul>
@@ -49,26 +49,33 @@
 
 <div class="container">
 <div class="jumbotron">
-  <h1>Director</h1>
-  <p>Name: Ivanov Ivan</p>
-  <p>Skype: Ivanov_Ivan</p>
-  <p>Email: IvanovIvan@gmail.com</p>
-  <p>Phone: 050-375-5-381</p>
-  <h1>Manager</h1>
-  <p>Name: Petrov Petr</p>
-  <p>Skype: Petrov_Petr</p>
-  <p>Email: PetrovPetr@gmail.com</p>
-  <p>Phone: 050-375-5-382</p>
-  <h1>Founder</h1>
-  <p>Name: Sidorov Sidor</p>
-  <p>Skype: Sidorov_Sidor</p>
-  <p>Email: SidorovSidor@gmail.com</p>
-  <p>Phone: 050-375-5-383</p>
+  <h1>Курс PyBursa</h1>
+  <p>Ниже представлен список студентов:</p>
+  <table class="table">
+  <TR>
+                <TD>No</TD> <TD>Surname</TD> <TD>Name</TD> <TD>Address</TD> <TD>Skype</TD>
+        </TR>
+        <TR>
+                <TD><li><a href="student_detail.html">1</a></li></TD> <TD>Persianova</TD> <TD>Olena</TD> <TD>Украина, г.Харьков, ул. Иванова,д.36,кв.3</TD> <TD>olena.persianova</TD>
+        </TR>
+        <TR>
+                <TD>2</TD> <TD>Shulga</TD> <TD>Marina</TD> <TD>Украина, г.Харьков, ул. Иванова,д.5,кв.6</TD> <TD>M.Shulga</TD>
+        </TR>
+        <TR>
+                <TD>3</TD> <TD>Polishchuk</TD> <TD>Volodymyr</TD> <TD>Украина, г.Харьков, ул. Иванова,д.5,кв.16</TD> <TD>V.Polishchuk</TD>
+        </TR>
+        <TR>
+                <TD>4</TD> <TD>Zhlobinskii</TD> <TD>Pavel</TD> <TD>Украина, г.Харьков, ул. Иванова,д.5,кв.11</TD> <TD>P.Zhlobinskii</TD>
+        </TR>
+        <TR>
+                <TD>5</TD> <TD>Zhuvanov</TD> <TD>Yaroslav</TD> <TD>Украина, г.Харьков, ул. Иванова,д.5,кв.20</TD> <TD>Y.Zhuvanov</TD>
+        </TR>
+</table> 
 </div>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/css/js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
