--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Main <span class="sr-only">(current)</span></a></li>
 <li><a href="contact.html">Contacts</a></li>
-        
+<li><a href="student_list.html">Students</a></li>        
           </ul>
         </li>
       </ul>
