--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Bootstrap 101 Template</title>
-
+    <link rel="stylesheet" href="../static/css/some_file.css"/>
     <!-- Bootstrap -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
@@ -35,8 +35,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Main</a></li>
-        <li class="active"><a href="#">Contacts <span class="sr-only">(current)</span></a></li>
-<li><a href="student_list.html">Students</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li><a href="student_list.html">Students</a></li>        
           </ul>
         </li>
       </ul>
@@ -49,26 +49,53 @@
 
 <div class="container">
 <div class="jumbotron">
-  <h1>Director</h1>
-  <p>Name: Ivanov Ivan</p>
-  <p>Skype: Ivanov_Ivan</p>
-  <p>Email: IvanovIvan@gmail.com</p>
-  <p>Phone: 050-375-5-381</p>
-  <h1>Manager</h1>
-  <p>Name: Petrov Petr</p>
-  <p>Skype: Petrov_Petr</p>
-  <p>Email: PetrovPetr@gmail.com</p>
-  <p>Phone: 050-375-5-382</p>
-  <h1>Founder</h1>
-  <p>Name: Sidorov Sidor</p>
-  <p>Skype: Sidorov_Sidor</p>
-  <p>Email: SidorovSidor@gmail.com</p>
-  <p>Phone: 050-375-5-383</p>
+  <h1><span class="colortext">Persianova Olena</span></h1>
+  <p> Student about himself:<p/>
+</div>
+</div>  
+<div class="container">
+<div class="jumbotron">
+  <table bordercolor="green" border="5" width="100%"><class="table">
+  <TR>
+                <TD><span class="colortext">Surname</span></TD> <TD>Persianova</TD> 
+        </TR> 
+  <TR>
+                <TD><span class="colortext">Name</span></TD> <TD>Olena</TD> 
+        </TR>
+  <TR>
+                <TD><span class="colortext">Patronymic</span></TD> <TD>Yuriivna</TD> 
+        </TR>
+  <TR>
+                <TD><span class="colortext">Birth Date</span></TD> <TD>11/02/1989</TD> 
+        </TR>
+  <TR>
+                <TD><span class="colortext">Address</span></TD> <TD>Украина, г.Харьков, ул. Иванова,д.36,кв.3</TD> 
+        </TR>
+  <TR>
+                <TD><span class="colortext">E-mail</span></TD> <TD>olena.persianova@gmail.com</TD> 
+        </TR>
+  <TR>
+                <TD><span class="colortext">Skype</span></TD> <TD>olena.persianova</TD> 
+        </TR>
+  </table>
 </div>
 </div>
+<div class="container">
+<div class="jumbotron">
+  <table bordercolor="blue" border="5" width="100%"><class="table">
+  <TR>
+                <TD><span class="colortext">Problem Task</span></TD> <TD>100%</TD> 
+        </TR> 
+  <TR>
+                <TD><span class="colortext">Tests</span></TD> <TD>100%</TD> 
+        </TR>
+  </table>
+</div>
+</div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../static/css/js/bootstrap.js"></script>
+    <script src="../static/js/bootstrap.js"></script>
   </body>
 </html>
