Modified old files

--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -134,7 +134,7 @@
                                 <tr>
                                     <td></td>
                                     <td></td>
-                                    <td>Problem task № 1</td>
+                                    <td>Problem Task № 1</td>
                                     <td>100%</td>
                                     <td class="text-center">25%</td>
                                     <td class="text-center">25%</td>
@@ -142,7 +142,7 @@
                                 <tr>
                                     <td></td>
                                     <td></td>
-                                    <td>Problem task № 2</td>
+                                    <td>Problem Task № 2</td>
                                     <td>100%</td>
                                     <td class="text-center">25%</td>
                                     <td class="text-center">25%</td>
@@ -158,7 +158,23 @@
                                 <tr>
                                     <td></td>
                                     <td></td>
-                                    <td>Problem task № 1</td>
+                                    <td>Problem Task № 1</td>
+                                    <td>100%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td>Average Grade</td>
+                                    <td>100%</td>
+                                    <td class="text-center">25%</td>
+                                    <td class="text-center">25%</td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td>Average Grade</td>
                                     <td>100%</td>
                                     <td class="text-center">25%</td>
                                     <td class="text-center">25%</td>
