Modified old files

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -45,16 +45,16 @@
                     <div class="table-responsive">
                         <table class="table table-bordered">
                             <thead>
-                                <tr>
-                                    <th>No</th>
-                                    <th>Surname</th>
-                                    <th>Name</th>
-                                    <th>Address</th>
-                                    <th>Skype</th>
+                                <tr class="active text-info">
+                                    <th class="text-center">No</th>
+                                    <th class="text-center">Surname</th>
+                                    <th class="text-center">Name</th>
+                                    <th class="text-center">Address</th>
+                                    <th class="text-center">Skype</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr class="success text-danger">
                                     <th scope="row">
                                         <a href="student_detail.html">1</a>
                                     </th>
@@ -63,21 +63,21 @@
                                     <td>Украина, город Николаев, пр-т. Мира 64 б </td>
                                     <td>rus-nik2007</td>
                                 </tr>
-                                <tr>
+                                <tr class="warning text-success">
                                     <th scope="row">2</th>
                                     <td>Ivanov</td>
                                     <td>Ivan</td>
                                     <td>Украина, город Винница, ул. Паровозная 64 б </td>
                                     <td>ivashka</td>
                                 </tr>
-                                <tr>
+                                <tr class="danger text-info">
                                     <th scope="row">3</th>
                                     <td>Stepanov</td>
                                     <td>Stepan</td>
                                     <td>Украина, город Николаев, ул. Лазурная 64 б </td>
                                     <td>stepashka</td>
                                 </tr>
-                                <tr>
+                                <tr class="info black">
                                     <th scope="row">4</th>
                                     <td>Stepanov</td>
                                     <td>Stepan</td>
