--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -76,8 +76,9 @@
 			<h2 class="section-title black">
 				PyBursa Students table
 			</h2> <!-- /.section-title -->
-			<p class="section-title black">PyBursa Students Mart-April 2015</p>
-			<div class="panel panel-default">
+			<p class="section-title">PyBursa Students Mart-April 2015</p>
+			<p>Аппрувнись, але</p>
+		<div class="panel panel-default">
 
   <!-- Table -->
   <table class="table">
