--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -70,14 +70,14 @@
 		</div> <!-- /.container -->
 	</section> <!-- /.section-background -->
 
-
 	<section class="price-table">
 		<div class="container section-wrapper">
 			<h2 class="section-title black">
 				PyBursa Students table
 			</h2> <!-- /.section-title -->
 			<p class="section-title">PyBursa Students Mart-April 2015</p>
-			<p>Аппрувнись, але</p>
+			<div class="panel-heading">Students List</div>
+
 		<div class="panel panel-default">
 
   <!-- Table -->
